applications/scratch-7009711/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-7009711
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-7009711

  template:
    metadata:
      labels:
        app: scratch-7009711

    spec:
      containers:
      - name: scratch-7009711
        image: scratch:latest

        ports:
        - containerPort: 80
