applications/scratch-7009711/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-7009711
  namespace: scratch

spec:
  selector:
    app: scratch-7009711

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
