applications/scratch-7009711/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-7009711
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-7009711.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-7009711

            port:
              number: 80
